// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Tests Buttons can be disabled 1`] = `
{
  "Automation Tree": {
    "AutomationId": "disabled_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": false,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": false,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {},
}
`;

exports[`Button Tests Buttons can have accessibility labels 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibilityLabel_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {},
}
`;

exports[`Button Tests Buttons can have accessibility props 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibility_props",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "Submit Button",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {},
}
`;

exports[`Button Tests Buttons can have accessibility states 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibilityState_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": false,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": false,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {},
}
`;

exports[`Button Tests Buttons can have custom colors 1`] = `
{
  "Automation Tree": {
    "AutomationId": "cancel_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Cancel Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to cancel your application!",
  },
  "Visual Tree": {},
}
`;

exports[`Button Tests Buttons have default styling 1`] = `
{
  "Automation Tree": {
    "AutomationId": "button_default_styling",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {},
}
`;
